--- a/index.html
+++ b/index.html
@@ -209,10 +209,8 @@
                             <div>
                                 <label class="text-xs font-semibold text-gray-400 uppercase">Tipe Cuti</label>
                                 <select id="leave-type" class="w-full mt-1 bg-gray-700 border border-gray-600 text-white p-2.5 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none transition">
-                                    <option value="Tahunan">Cuti Tahunan</option>
-                                    <option value="Sakit">Sakit (Sick Leave)</option>
-                                    <option value="Izin">Izin Khusus</option>
-                                    <option value="Unpaid">Unpaid Leave</option>
+                                    <option value="Tahunan">Cuti Tahunan (Yearly)</option>
+                                    <option value="Bulanan">Cuti Bulanan (Monthly)</option>
                                 </select>
                             </div>
                             <div>
@@ -992,10 +990,9 @@
                     let displayTitle = r.realName || r.username;
 
                     if(r.status === 'Approved') {
-                        if(type === 'Sakit') color = '#ef4444'; 
-                        else if(type === 'Tahunan') color = '#10b981'; 
-                        else if(type === 'Unpaid') color = '#6366f1'; 
-                        else color = '#3b82f6'; 
+                        if(type === 'Tahunan') color = '#10b981'; // Green for Annual
+                        else if(type === 'Bulanan') color = '#3b82f6'; // Blue for Monthly
+                        else color = '#6b7280'; // Gray for legacy/other
                         
                         displayTitle = `${displayTitle} (${type})`;
                     } else {
