--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <!-- Wajib agar responsive di HP -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Sistem Cuti Pegawai</title>
-    
+    <title>Cuti Online</title>
+    <meta name="robots" content="noindex">
     <!-- Library CSS & JS -->
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script>
     <script src="https://cdn.tailwindcss.com"></script>
